fix: blurred UI

--- a/inst/css/custom.css
+++ b/inst/css/custom.css
@@ -16,6 +16,10 @@ body > div:has(~ #shiny-modal-wrapper .blur_background) {
   filter: blur(5px);
 }
 
+.blurred {
+  filter: blur(5px);
+}
+
 #shiny-modal.fade.in:has(.hide_background) {
   transition: background-color 0.3s;
 }
